--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">LoyaltyCard</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragmet_bank_card">Bank cards</string>
+    <string name="fragment_discount_card">Discount cards</string>
+    <string name="bank_cards">Bank cards</string>
+    <string name="discount_cards">Discount cards</string>
+    <string name="add">Add</string>
 </resources>
