add AddDiscountCardFragment.kt, setup toolbar arrow color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="bank_cards">Bank cards</string>
     <string name="discount_cards">Discount cards</string>
     <string name="add">Add</string>
+    <string name="create">Create</string>
 </resources>
