--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="discount_cards">Discount cards</string>
     <string name="add">Add</string>
     <string name="create">Create</string>
+    <string name="card_name">Card Name</string>
+    <string name="card_number">Card number</string>
+    <string name="description">Description</string>
 </resources>
