--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="card_name">Card Name</string>
     <string name="card_number">Card number</string>
     <string name="description">Description</string>
+    <string name="search">Search</string>
 </resources>
